--- a/style.css
+++ b/style.css
@@ -70,6 +70,44 @@ margin: 0 auto;
     flex-direction: column;
     justify-content: center;
 }
+.parametro-senha {
+    width: 50%;
+    margin: 0 auto;
+}
+.parametro-senha_botoes {
+    display: flex;
+    justify-content: center;
+}
+
+.parametro-senha_botao {
+  background-color: var(--fundo-texto);
+  color: var(--branco);
+  border: 2px solid var(--borda);
+  padding: 24px;
+  font-size: 24px;
+  cursor: pointer;
+}
+.parametro-senha-textos {
+    padding: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
+label {
+    font-size: 20px;
+
+}
+.checkbox {
+    width: 20px;
+    height: 30px;
+    cursor: pointer;
+}
+.barra {
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
 .forca{
     height: 30px;
     position: relative;
